--- a/notebook/A2A_Tools.ipynb
+++ b/notebook/A2A_Tools.ipynb
@@ -10,20 +10,34 @@
     "\n",
     "### What is Agent-to-Agent (A2A) Communication?\n",
     "\n",
-    "Agent-to-Agent (A2A) communication is a protocol that enables agents to interact with each other, allowing them to:\n",
-    "- Delegate specialized tasks to other agents\n",
-    "- Share information and context\n",
-    "- Collaborate on complex problems\n",
-    "- Create hierarchical agent structures\n",
+    "The Agent-to-Agent protocol is an open standard that defines how AI agents can discover, communicate, and collaborate with each other.\n",
     "\n",
-    "![a2a](image/a2a.png)\n",
+    "A2A protocol support enables several powerful use cases:\n",
     "\n",
-    "### Use Cases\n",
-    "- A2A protocol support enables several powerful use cases:\n",
     "- Multi-Agent Workflows: Chain multiple specialized agents together\n",
     "- Agent Marketplaces: Discover and use agents from different providers\n",
     "- Cross-Platform Integration: Connect Strands agents with other A2A-compatible systems\n",
     "- Distributed AI Systems: Build scalable, distributed agent architectures\n",
+    "\n",
+    "### MCP vs A2A\n",
+    "\n",
+    "It's important to understand how A2A relates to MCP, or Model Context Protocol. These are complementary standards.\n",
+    "\n",
+    "- MCP connects agents to tools, APIs, and resources with structured inputs/outputs. Think of it as how agents access their capabilities.\n",
+    "\n",
+    "- A2A facilitates dynamic communication between different agents as peers. It's how agents collaborate, delegate, and manage shared tasks.\n",
+    "\n",
+    "They're complementary - MCP gives agents their tools, A2A enables collaboration.\n",
+    "click\n",
+    "\n",
+    "### A2A Architecture \n",
+    "\n",
+    "- **Primary Agent**: Initiates communication and delegates tasks (the \"manager\")\n",
+    "- **Secondary Agent(s)**: Receive tasks and provide responses (the \"specialists\")\n",
+    "- **A2A Tool**: Handles protocol details for seamless communication between the agents\n",
+    "- **Message Protocol**: Defines message format and structure\n",
+    "\n",
+    "![a2a](image/a2a.png)\n",
     "\n",
     "### Learn more about the A2A protocol:\n",
     "\n",
@@ -33,35 +47,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Understanding A2A Architecture\n",
-    "\n",
-    "The A2A architecture consists of several key components:\n",
-    "\n",
-    "1. **Primary Agent**: The agent that initiates the communication and delegates tasks.\n",
-    "2. **Secondary Agent(s)**: The agent(s) that receive tasks and provide responses.\n",
-    "3. **A2A Tool**: The component that facilitates communication between agents.\n",
-    "4. **Message Protocol**: The format and structure of messages exchanged between agents."
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> A2A and the Model Context Protocol (MCP) are complementary standards for building robust agentic applications:\n",
-    "\n",
-    "> ⭐ MCP (Model Context Protocol): Connects agents to tools, APIs, and resources with structured inputs/outputs. Think of it as the way agents access their capabilities.\n",
-    "\n",
-    "> ⭐ A2A (Agent2Agent Protocol): Facilitates dynamic, multimodal communication between different agents as peers. It's how agents collaborate, delegate, and manage shared tasks. [Source](https://a2a-protocol.org/latest/#why-a2a-matters)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ✅ Let's start\n",
+    "## ✅ Lests bild an A2A aplication\n",
     "\n",
     "In this section, we will do a walkthrough of selected code blocks, that have been used to build [strands-a2a-inter-agent](strands-a2a-inter-agent/), based on the [sample-agentic-ai-demos repositorie](https://github.com/aws-samples/sample-agentic-ai-demos/tree/main/modules/strands-a2a-inter-agent) to create a A2A agent.\n",
     "\n",
@@ -153,23 +153,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Server Configuration Options¶\n",
-    "The A2AServer constructor accepts several configuration options:\n",
+    "## 3. Employee Agent\n",
     "\n",
-    "- **agent**: The Strands Agent to wrap with A2A compatibility\n",
-    "- **host**: Hostname or IP address to bind to (default: \"0.0.0.0\")\n",
-    "- **port**: Port to bind to (default: 9000)\n",
-    "- **version**: Version of the agent (default: \"0.0.1\")\n",
-    "- **skills**: Custom list of agent skills (default: auto-generated from tools)"
+    "The Employee Agent connects to the MCP server and exposes its capabilities through an A2A server:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Employee Agent\n",
-    "\n",
-    "The Employee Agent connects to the MCP server and exposes its capabilities through an A2A server:\n",
     "\n",
     "```python\n",
     "import os\n",
@@ -230,13 +222,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Key components of the Employee Agent:\n",
+    "### [Server Configuration Options](https://strandsagents.com/latest/documentation/docs/user-guide/concepts/multi-agent/agent-to-agent/#server-configuration-options)\n",
+    "The A2AServer exposes the agent's capabilities to other agents through an HTTP API and accepts several configuration options:\n",
     "\n",
-    "1. **MCP Client**: Connects to the MCP server to access the employee data tools\n",
-    "2. **Strands Agent**: Uses the AnthropicModel to process requests and use the MCP tools\n",
-    "3. **A2A Server**: Exposes the agent's capabilities to other agents through an HTTP API\n",
-    "\n",
-    "The Employee Agent acts as a bridge between the HR Agent and the MCP Server, providing a more intelligent interface to the raw data."
+    "- **agent**: The Strands Agent to wrap with A2A compatibility\n",
+    "- **host**: Hostname or IP address to bind to (default: \"0.0.0.0\")\n",
+    "- **port**: Port to bind to (default: 9000)\n",
+    "- **ersion**: Version of the agent (default: \"0.0.1\")\n",
+    "- **skills**: Custom list of agent skills (default: auto-generated from tools)\n",
+    "- **http_url**: Public HTTP URL where this agent will be accessible (optional, enables path-based mounting)\n",
+    "- **serve_at_root**: Forces server to serve at root path regardless of http_url path (default: False)"
    ]
   },
   {
@@ -247,9 +242,16 @@
     }
    },
    "source": [
-    "### 4. HR Agent\n",
+    "## 4. HR Agent\n",
     "\n",
-    "Finally, the HR Agent provides a user-facing API and communicates with the Employee Agent:\n",
+    "Finally, the HR Agent provides a user-facing API and communicates with the Employee Agent.\n",
+    "\n",
+    "- Creates a FastAPI application to handle HTTP requests\n",
+    "- Uses the A2AClientToolProvider for discovering and interacting with A2A agents without manually writing client code.\n",
+    "- Provides an endpoint for users to ask questions about employees\n",
+    "\n",
+    "This agent serves as the entry point for user queries and delegates specialized tasks to the Employee Agent when needed.\n",
+    "\n",
     "\n",
     "```python\n",
     "import os\n",
@@ -273,10 +275,16 @@
     "def health_check():\n",
     "    return {\"status\": \"healthy\"}\n",
     "\n",
-    "bedrock_model = BedrockModel(\n",
-    "    model_id=\"amazon.nova-micro-v1:0\",\n",
-    "    region_name=\"us-east-1\",\n",
-    "    temperature=0.5,\n",
+    "model = AnthropicModel(\n",
+    "    client_args={\n",
+    "        \"api_key\": os.getenv(\"api_key\"),\n",
+    "    },\n",
+    "    # **model_config\n",
+    "    max_tokens=1028,\n",
+    "    model_id=\"claude-3-7-sonnet-20250219\",\n",
+    "    params={\n",
+    "        \"temperature\": 0.3,\n",
+    "    }\n",
     ")\n",
     "\n",
     "@app.post(\"/inquire\")\n",
@@ -309,67 +317,77 @@
    "source": [
     "## ✅ Running the Example\n",
     "\n",
-    "To run this example, you need to start each component in a separate terminal:\n",
+    "### Option 1: Run each component in a separate terminal:\n",
     "\n",
-    "1. Start the MCP Server:\n",
-    "```bash\n",
-    "python server.py\n",
+    "**1. Set your API key:**\n",
+    " ```bash\n",
+    "   export api_key='your-anthropic-api-key-here'\n",
     "```\n",
     "\n",
-    "2. Start the Employee Agent:\n",
+    "**2. Install Required Packages:**\n",
+    "\n",
+    " ```bash\n",
+    "   !pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "**3. Start the MCP Server:**\n",
+    "```bash\n",
+    "python3 strands-a2a-inter-agent/server.py\n",
+    "```\n",
+    "\n",
+    "**4. Start the Employee Agent:**\n",
     "```bash\n",
     "python employee-agent.py\n",
     "```\n",
     "\n",
-    "3. Start the HR Agent:\n",
+    "**5. Start the HR Agent:**\n",
     "```bash\n",
     "python hr-agent.py\n",
     "```\n",
     "\n",
-    "4. Make a request to the HR Agent:\n",
+    "**6. Make a request to the HR Agent:**\n",
+    "\n",
+    "Once all three components are running, you can make requests to the HR Agent:\n",
+    "\n",
     "```bash\n",
     "curl -X POST --location \"http://0.0.0.0:8000/inquire\" \\\n",
     "-H \"Content-Type: application/json\" \\\n",
     "-d '{\"question\": \"list employees that have skills related to AI programming\"}'\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Option 2: Runs the MCP Server, Employee Agent, and HR Agent in parallel\n",
+    "\n",
+    "**1. Set your API key:**\n",
+    " ```bash\n",
+    "   export api_key='your-anthropic-api-key-here'\n",
+    "```\n",
+    "\n",
+    "**2. Install Required Packages:**\n",
+    "\n",
+    " ```bash\n",
+    "   !pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "**3. Start the system:**\n",
+    "  ```bash\n",
+    "   python run_a2a_system.py\n",
+    "```\n",
+    "\n",
+    "**4. Make Requests to the HR Agent**\n",
+    "\n",
+    "Once all three components are running, you can make requests to the HR Agent:\n",
+    "\n",
+    "```bash\n",
+    "curl -X POST --location \"http://0.0.0.0:8000/inquire\" \\\n",
+    "-H \"Content-Type: application/json\" \\\n",
+    "-d '{\"question\": \"list employees that have skills related to AI programming\"}'\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Best Practices for A2A Tools\n",
-    "\n",
-    "When using A2A tools with the Strands Agent Framework, consider the following best practices:\n",
-    "\n",
-    "1. **Clear Agent Roles**: Define clear roles and responsibilities for each agent in your system.\n",
-    "\n",
-    "2. **Effective Delegation**: Ensure that the coordinator agent knows when and how to delegate tasks to specialized agents.\n",
-    "\n",
-    "3. **Context Preservation**: Maintain context when passing information between agents to ensure coherent responses.\n",
-    "\n",
-    "4. **Error Handling**: Implement robust error handling for agent-to-agent communication.\n",
-    "\n",
-    "5. **Avoid Circular Dependencies**: Be careful to avoid circular dependencies between agents that could lead to infinite loops.\n",
-    "\n",
-    "6. **Optimize Communication**: Minimize the number of agent-to-agent communications to reduce latency and costs.\n",
-    "\n",
-    "7. **Monitor Performance**: Monitor the performance of your agent network to identify bottlenecks and opportunities for improvement.\n",
-    "\n",
-    "8. **Test Thoroughly**: Test your agent network with a variety of inputs to ensure it handles edge cases correctly.\n",
-    "\n",
-    "\n",
-    "## Conclusion\n",
-    "\n",
-    "In this notebook, we've explored Agent-to-Agent (A2A) communication in depth and learned how to leverage it effectively with the Strands Agent Framework. We've created specialized agents, implemented various A2A patterns, and built complex workflows that demonstrate the power of agent collaboration.\n",
-    "\n",
-    "A2A is a powerful paradigm that enables the creation of sophisticated agent networks capable of solving complex problems through collaboration and specialization."
-   ]
   }
  ],
  "metadata": {
