--- a/notebook/multi-understanding-with-memory.ipynb
+++ b/notebook/multi-understanding-with-memory.ipynb
@@ -11,6 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d585e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mem0ai\n",
+    "!pip install opensearch-py\n",
+    "!pip install faiss-cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b730f098",
    "metadata": {},
    "outputs": [],
