--- a/notebook/multi-understanding.ipynb
+++ b/notebook/multi-understanding.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "# Example 4. Direct use of tools\n",
     "video_analysis = multimodal_agent.tool.video_reader(\n",
-    "     video_path=\"video.mp4\", \n",
+    "     video_path=\"data-sample/moderation-video.mp4\", \n",
     "     text_prompt=\"What are the main elements in this video?\"\n",
     ")"
    ]
@@ -186,8 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_analysis.message['content'][0]['text']"
+    "video_analysis"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3171cac0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9272f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
