--- a/notebook/05-Strands_A2A_Tools.ipynb
+++ b/notebook/05-Strands_A2A_Tools.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Strands and Agent-to-Agent (A2A) Protocol\n",
+    "# 🤝 Agent-to-Agent (A2A) Communication with Strands\n",
     "\n",
     "Strands Agents supports the [Agent-to-Agent (A2A)](https://strandsagents.com/latest/documentation/docs/user-guide/concepts/multi-agent/agent-to-agent/), an open standard that defines how AI agents can discover, communicate, and collaborate with each other. Enabling seamless communication between AI agents across different platforms and implementations.\n",
     "\n",
