--- a/notebook/06-Strands_Observability_with_LangFuse_and_Evaluation_with_RAGAS.ipynb
+++ b/notebook/06-Strands_Observability_with_LangFuse_and_Evaluation_with_RAGAS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Observability with LangFuse and Evaluation with RAGAS 🔍📊\n",
+    "# 🔍 Agent Observability with LangFuse and RAGAS Evaluation\n",
     "\n",
     "In the Strands Agents SDK, observability refers to your ability to measure system behavior and performance. Observability combines instrumentation, data collection, and analysis techniques. These techniques provide insights into an agent's behavior and performance, helping you effectively build, debug, and maintain agents that better serve your unique needs and reliably complete tasks.\n",
     "\n",
