--- a/notebook/multimodal-understanding/02-multimodal-with-mcp.ipynb
+++ b/notebook/multimodal-understanding/02-multimodal-with-mcp.ipynb
@@ -5,7 +5,23 @@
    "id": "bde193fa",
    "metadata": {},
    "source": [
-    "# 🎯 Multi-Agent Multimodal Analysis\n"
+    "# 🎯 Multimodal Processing with Video Analysis\n",
+    "\n",
+    "This notebook extends multimodal content processing by adding video analysis capabilities using [Amazon Nova Pro](https://aws.amazon.com/bedrock/nova/) through [Amazon Bedrock](https://aws.amazon.com/bedrock/). You'll build an agent that processes images, documents, and videos in a unified workflow.\n",
+    "\n",
+    "## What You'll Learn\n",
+    "\n",
+    "- Analyze video content using the `video_reader` tool with Amazon Nova Pro\n",
+    "- Process multiple content types (images, documents, videos) in one agent\n",
+    "- Extract insights from temporal video data\n",
+    "- Combine text, visual, and video understanding\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- AWS account with [Amazon Bedrock access](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access.html)\n",
+    "- Claude 3.5 Sonnet and Amazon Nova Pro models enabled in Bedrock\n",
+    "- AWS CLI configured with appropriate permissions\n",
+    "- Sample video files for testing\n"
    ]
   },
   {
@@ -22,9 +38,7 @@
     "from video_reader import video_reader\n",
     "from strands.tools import tool\n",
     "\n",
-    "\n",
-    "# video_reader is already available as a built-in tool\n",
-    "agent = Agent(tools=[image_reader, file_read, video_reader])"
+    "\n"
    ]
   },
   {
@@ -72,7 +86,6 @@
     "\n",
     "bedrock_model = BedrockModel(\n",
     "    model_id=\"us.anthropic.claude-3-7-sonnet-20250219-v1:0\",\n",
-    "    #model_id=\"us.amazon.nova-pro-v1:0\",\n",
     "    boto_session=session,\n",
     "    streaming=False\n",
     ")\n",
@@ -115,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_result.message['content'][0]['text']"
+    "print(image_result.message['content'][0]['text'])"
    ]
   },
   {
@@ -135,16 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dec38e54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video_result.message['content'][0]['text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a30275dc",
    "metadata": {},
    "outputs": [],
@@ -158,11 +161,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b24ed3",
+   "id": "4c30297f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_result.message['content'][0]['text']"
+    "# Connect to an MCP server using stdio transport\n",
+    "# Note: uvx command syntax differs by platform\n",
+    "\n",
+    "from mcp import stdio_client, StdioServerParameters\n",
+    "from strands.tools.mcp import MCPClient\n",
+    "\n",
+    "\n",
+    "# For macOS/Linux:\n",
+    "stdio_mcp_client = MCPClient(lambda: stdio_client(\n",
+    "    StdioServerParameters(\n",
+    "        command=\"uvx\", \n",
+    "        args=[\"awslabs.aws-documentation-mcp-server@latest\"],\n",
+    "\n",
+    "    )\n",
+    "))\n",
+    "\n",
+    "# Updated multimodal system prompt to include video support\n",
+    "MULTIMODAL_SYSTEM_PROMPT = \"\"\" You are a helpful assistant that can process documents, images, and videos. \n",
+    "Analyze their contents and provide relevant information.\n",
+    "\n",
+    "You can:\n",
+    "\n",
+    "1. For PNG, JPEG/JPG, GIF, or WebP formats use image_reader to process file\n",
+    "2. For PDF, csv, docx, xls or xlsx formats use file_read to process file  \n",
+    "3. For MP4, MOV, AVI, MKV, WebM formats use video_reader to process file\n",
+    "4. If someone asks you about AWS costs, use the available tools, don't make things up. \n",
+    "5. Just deliver the answer\n",
+    "\n",
+    "When displaying responses:\n",
+    "- Format answers data in a human-readable way\n",
+    "- Highlight important information\n",
+    "- Handle errors appropriately\n",
+    "- Convert technical terms to user-friendly language\n",
+    "- Always reply in the original user language\n",
+    "\n",
+    "Always reply in the original user language.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Create an agent with MCP tools\n",
+    "with stdio_mcp_client:\n",
+    "    # Get the tools from the MCP server\n",
+    "    mcp_tool = stdio_mcp_client.list_tools_sync()\n",
+    "\n",
+    "    # Create an agent with these tools\n",
+    "    multimodal_agent = Agent(\n",
+    "        system_prompt=MULTIMODAL_SYSTEM_PROMPT,\n",
+    "        tools=[image_reader, file_read,video_reader,*mcp_tool],\n",
+    "        model=bedrock_model)\n",
+    "    #response = multimodal_agent(\"Analyze the image data-sample/diagram.jpg in detail and describe everything you observe and an approximate cost of use\")\n",
+    "    print(multimodal_agent.tool_names)\n",
+    "    # Example 1: Image analysis\n",
+    "    print(\"=== 📸 IMAGE ANALYSIS ===\")\n",
+    "    image_result = multimodal_agent(\"Analyze the image data-sample/diagram.jpg in detail and describe everything you observe and use the AWS documentation\")\n",
+    "    print(image_result)\n",
+    "    print(\"\\n\" + \"=\"*80 + \"\\n\")\n"
    ]
   },
   {
@@ -174,7 +231,7 @@
    "source": [
     "# Example 4. Direct use of tools\n",
     "video_analysis = multimodal_agent.tool.video_reader(\n",
-    "     video_path=\"data-sample/moderation-video.mp4\", \n",
+    "     video_path=\"video.mp4\", \n",
     "     text_prompt=\"What are the main elements in this video?\"\n",
     ")"
    ]
@@ -186,24 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_analysis"
+    "video_analysis.message['content'][0]['text']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3171cac0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9272f06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -222,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
