--- a/notebook/multimodal-understanding/03-multimodal-with-faiss.ipynb
+++ b/notebook/multimodal-understanding/03-multimodal-with-faiss.ipynb
@@ -5,7 +5,26 @@
    "id": "bde193fa",
    "metadata": {},
    "source": [
-    "# 🎯 Multi-Agent Multimodal Analysis with FAISS Memory\n"
+    "# 🎯 Multimodal Processing with Local Vector Memory\n",
+    "\n",
+    "This notebook demonstrates multimodal content processing with persistent memory using [FAISS](https://github.com/facebookresearch/faiss) for local vector storage. You'll build an agent that remembers previous conversations and content across sessions using [Mem0](https://mem0.ai/) integration.\n",
+    "\n",
+    "## What You'll Learn\n",
+    "\n",
+    "- Implement persistent memory with FAISS vector storage\n",
+    "- Maintain conversation context across multiple sessions\n",
+    "- Process multimodal content with memory-enhanced responses\n",
+    "- Use semantic search for relevant context retrieval\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- AWS account with [Amazon Bedrock access](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access.html)\n",
+    "- Claude 3.5 Sonnet model enabled in Bedrock\n",
+    "- Python packages: `mem0ai`, `faiss-cpu`, `opensearch-py`\n",
+    "\n",
+    "## Memory Architecture\n",
+    "\n",
+    "This notebook uses FAISS for local development. For production deployments, consider [Amazon S3 Vectors](https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-vectors.html) as shown in the S3 vectors notebook.\n"
    ]
   },
   {
@@ -165,6 +184,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7c29369",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9772e4e1",
@@ -294,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
