--- a/notebook/multimodal-understanding/04-multimodal-with-s3-vectors.ipynb
+++ b/notebook/multimodal-understanding/04-multimodal-with-s3-vectors.ipynb
@@ -5,7 +5,7 @@
    "id": "bde193fa",
    "metadata": {},
    "source": [
-    "# ☁️ Multi-Agent Multimodal Analysis with S3 Vectors Memory\n",
+    "# ☁️ Multimodal Processing with Amazon S3 Vectors Memory\n",
     "\n",
     "This notebook demonstrates multi-modal content processing using **Strands Agents** with **Amazon S3 Vectors** as the memory backend. This is the production-ready episode in our multi-modal AI processing series.\n",
     "\n",
@@ -24,7 +24,23 @@
     "\n",
     "**Key Upgrade**: Moving from local FAISS to AWS-native Amazon S3 Vectors for production-ready memory management.\n",
     "\n",
-    "![a2a](image/s3_memory.png)"
+    "![a2a](../image/s3_memory.png)\n",
+    "\n",
+    "## From FAISS to S3 Vectors\n",
+    "\n",
+    "**FAISS (Chapter 3)**\n",
+    "- ✅ Great for development\n",
+    "- ✅ Fast local testing\n",
+    "- ❌ Single machine only\n",
+    "- ❌ No built-in durability\n",
+    "\n",
+    "**S3 Vectors (Chapter 4)**\n",
+    "- ✅ AWS-managed service\n",
+    "- ✅ Scales automatically\n",
+    "- ✅ Built-in durability\n",
+    "- ✅ Multi-user isolation\n",
+    "\n",
+    "Let's upgrade our agent to production-ready memory."
    ]
   },
   {
@@ -61,11 +77,15 @@
    "id": "config-section",
    "metadata": {},
    "source": [
-    "### 🔧 Environment Configuration\n",
+    "## Setup S3 Vectors\n",
     "\n",
-    "Configure your Amazon S3 Vectors and AWS settings:\n",
+    "Configure your bucket and index names. The tool will create them automatically on first use if they don't exist.\n",
     "\n",
-    "[Tutorial: Getting started with S3 Vectors](https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-vectors-getting-started.html)"
+    "**What gets created automatically:**\n",
+    "- ✅ S3 Vector bucket (if it doesn't exist)\n",
+    "- ✅ Vector index with 1024 dimensions (Nova/Titan compatible)\n",
+    "- ✅ Cosine similarity metric\n",
+    "- ✅ User isolation via metadata filtering"
    ]
   },
   {
@@ -75,28 +95,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# S3 Vectors Configuration\n",
-    "os.environ['VECTOR_BUCKET_NAME'] = 'YOUR-S3-BUCKET'  # Your S3 Vector bucket\n",
-    "os.environ['VECTOR_INDEX_NAME'] = 'YOUR-VECTOR-INDEX'        # Your vector index\n",
-    "os.environ['AWS_REGION'] = 'us-east-1'                       # AWS region\n",
-    "os.environ['EMBEDDING_MODEL'] = 'amazon.titan-embed-text-v2:0' # Bedrock embedding model\n",
+    "# Configure S3 Vectors (bucket and index will be created automatically)\n",
+    "os.environ['VECTOR_BUCKET_NAME'] = 'multimodal-vector-store'  # Choose your bucket name\n",
+    "os.environ['VECTOR_INDEX_NAME'] = 'strands-multimodal'        # Choose your index name\n",
+    "os.environ['AWS_REGION'] = 'us-east-1'                       # Your AWS region\n",
+    "os.environ['EMBEDDING_MODEL'] = 'amazon.nova-2-multimodal-embeddings-v1:0'  # Nova embeddings\n",
     "\n",
-    "# User identification for memory isolation\n",
-    "USER_ID = \"demo_user_s3_vectors\"\n",
+    "USER_ID = \"demo_user\"  # Your user ID for memory isolation\n",
     "\n",
-    "print(f\"Configuration set for user: {USER_ID}\")\n",
-    "print(f\"S3 Vector bucket: {os.environ['VECTOR_BUCKET_NAME']}\")\n",
-    "print(f\"Vector index: {os.environ['VECTOR_INDEX_NAME']}\")"
+    "print(f\"✅ Config set - bucket and index will be created on first use\")\n",
+    "print(f\"   Bucket: {os.environ['VECTOR_BUCKET_NAME']}\")\n",
+    "print(f\"   Index: {os.environ['VECTOR_INDEX_NAME']}\")\n",
+    "print(f\"   User: {USER_ID}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70daf993",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "agent-section",
    "metadata": {},
    "source": [
-    "### 🚀 Agent Setup with S3 Vectors Memory\n",
+    "## Create Agent with S3 Memory\n",
     "\n",
-    "Create our multi-modal agent with AWS-native memory capabilities:"
+    "Same agent as Chapter 3, but now using `s3_vector_memory` instead of `mem0_memory`:"
    ]
   },
   {
@@ -169,7 +195,9 @@
     "    Please save this information about my preferences for future conversations.\n",
     "    \n",
     "    USER_ID: {USER_ID}\"\"\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(response1)"
    ]
   },
   {
@@ -177,9 +205,9 @@
    "id": "memory-test-section",
    "metadata": {},
    "source": [
-    "## Memory System Testing\n",
+    "## Test S3 Memory\n",
     "\n",
-    "Test our S3 Vectors memory system before processing multi-modal content:"
+    "Quick test - same API as FAISS, different backend:"
    ]
   },
   {
@@ -189,17 +217,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test memory storage\n",
-    "print(\"Testing S3 Vectors Memory System...\\n\")\n",
-    "\n",
-    "# Store initial preferences\n",
-    "memory_result = s3_vector_memory(\n",
+    "# Store a memory\n",
+    "result = s3_vector_memory(\n",
     "    action=\"store\",\n",
-    "    content=\"You are interested in AWS architecture, serverless solutions, and multi-modal AI processing. You prefer detailed technical explanations.\",\n",
+    "    content=\"User prefers AWS architecture and serverless solutions\",\n",
     "    user_id=USER_ID\n",
     ")\n",
-    "print(f\"Stored preferences: {memory_result['status']}\")\n",
-    "\n"
+    "print(f\"Store: {result['status']}\")"
    ]
   },
   {
@@ -209,13 +233,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test memory retrieval\n",
-    "memory_result = s3_vector_memory(\n",
+    "# Retrieve memories\n",
+    "result = s3_vector_memory(\n",
     "    action=\"retrieve\",\n",
-    "    query=\"preferences and interests\",\n",
+    "    query=\"AWS preferences\",\n",
     "    user_id=USER_ID\n",
     ")\n",
-    "print(f\"Retrieved memories: {memory_result['total_found']} found\")\n"
+    "print(f\"Retrieve: {result['total_found']} memories found\")"
    ]
   },
   {
@@ -225,7 +249,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# List all memories\n",
     "memory_result = s3_vector_memory(\n",
     "    action=\"list\",\n",
@@ -235,13 +258,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "222d08be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory_result['memories']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "image-section",
    "metadata": {},
    "source": [
-    "## Image Analysis with Memory\n",
+    "## Use It - Same as Chapter 3\n",
     "\n",
-    "Process images with persistent memory for context and insights:"
+    "The agent works exactly like Chapter 3, but memory is now in S3:"
    ]
   },
   {
@@ -418,57 +451,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "memory-review-section",
-   "metadata": {},
-   "source": [
-    "## Memory System Review\n",
-    "\n",
-    "Review what our S3 Vectors memory system has learned:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "memory-review",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Review all stored memories\n",
-    "print(\"S3 Vectors Memory System Review\\n\")\n",
-    "\n",
-    "# Get comprehensive memory list\n",
-    "all_memories = s3_vector_memory(\n",
-    "    action=\"list\",\n",
-    "    user_id=USER_ID,\n",
-    "    top_k=50  # Get more memories\n",
-    ")\n",
-    "\n",
-    "print(f\"\\nTotal memories stored: {all_memories['total_found']}\")\n",
-    "print(\"\\nMemory Categories Learned:\")\n",
-    "\n",
-    "# Test different memory retrievals\n",
-    "categories = [\n",
-    "    \"architecture and system design\",\n",
-    "    \"Strands Agents and AI tools\", \n",
-    "    \"video content and moderation\",\n",
-    "    \"preferences and interests\",\n",
-    "    \"AWS and serverless technologies\"\n",
-    "]\n",
-    "\n",
-    "for category in categories:\n",
-    "    result = s3_vector_memory(\n",
-    "        action=\"retrieve\",\n",
-    "        query=category,\n",
-    "        user_id=USER_ID,\n",
-    "        top_k=3\n",
-    "    )\n",
-    "    print(f\"  {category.title()}: {result['total_found']} relevant memories\")\n",
-    "\n",
-    "print(\"\\nMemory system successfully captured multi-modal processing insights!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "conversation-continuity-section",
    "metadata": {},
    "source": [
@@ -505,11 +487,19 @@
     "print(continuity_response.message)\n",
     "print(\"=\"*80)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba9a7079",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
