--- a/notebook/02-custom-tools.ipynb
+++ b/notebook/02-custom-tools.ipynb
@@ -37,46 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simple-tool",
-   "metadata": {},
-   "source": [
-    "## Creating a Simple Tool\n",
-    "\n",
-    "Let's create a simple calculator tool:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "calculator-tool",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@tool\n",
-    "def calculator(operation: str, a: float, b: float) -> float:\n",
-    "    \"\"\"Performs basic mathematical operations.\n",
-    "    \n",
-    "    Args:\n",
-    "        operation: The operation to perform (add, subtract, multiply, divide)\n",
-    "        a: First number\n",
-    "        b: Second number\n",
-    "    \n",
-    "    Returns:\n",
-    "        The result of the operation\n",
-    "    \"\"\"\n",
-    "    operations = {\n",
-    "        \"add\": a + b,\n",
-    "        \"subtract\": a - b,\n",
-    "        \"multiply\": a * b,\n",
-    "        \"divide\": a / b if b != 0 else \"Error: Division by zero\"\n",
-    "    }\n",
-    "    return operations.get(operation, \"Invalid operation\")\n",
-    "\n",
-    "print(\"✅ Calculator tool created!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "use-tool",
    "metadata": {},
    "source": [
@@ -92,6 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from strands_tools import calculator\n",
+    "\n",
     "# Setup Bedrock model\n",
     "session = boto3.Session(region_name='us-west-2')\n",
     "bedrock_model = BedrockModel(\n",
@@ -214,12 +176,12 @@
     "# Example of video_reader tool structure\n",
     "# (This is already implemented in video_reader.py)\n",
     "\n",
-    "from video_reader import video_reader\n",
+    "from multimodal_understanding.video_reader_local import video_reader_local\n",
     "\n",
     "# Create agent with built-in tools\n",
     "multimodal_agent = Agent(\n",
     "    model=bedrock_model,\n",
-    "    tools=[image_reader, file_read,video_reader],\n",
+    "    tools=[image_reader, file_read,video_reader_local],\n",
     "    system_prompt=\"\"\"You are a multi-modal assistant that can:\n",
     "    - Read and analyze images\n",
     "    - Process documents (PDF, CSV, DOCX, etc.)\n",
@@ -428,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
